k8s/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-k8s-service
spec:
  type: NodePort
  selector:
    app: jenkins-k8s
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
